refactor: refactored providers controller
